--- a/vendas.html
+++ b/vendas.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Página Home</h1>
+    <p>vendas = R$ 5.000,00</p>
     <a href="index.html">Voltar para a página Home</a>
 </body>
 </html>
