Página outros, Update index

--- a/outros.html
+++ b/outros.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Página Home</h1>
-    <a href="vendas.html">Ir para a página de vendas</a>
-    <a href="outros.html">Ir para a página de outros</a>
+    <p>Bem vindo</p>
+    <a href="index.html">Voltar para a página Home</a>
 </body>
 </html>
